mobile overflow fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,6 @@
 @import '../components//products-display/products-display.scss';
 @import '../components//nav/nav.scss';
 
-.dupa{
-  background-color: red;
-}
+html, body {
+  overflow-x:hidden 
+} 
